@@ -1,5 +1,10 @@
 10/6/2008
+
 - completed compilation of {include} tag, variable scoping same as in smarty2
+
+- added compilation of {capture} tag.
+
+- added error message on none existing template files.
 
 10/4/2008
 - added comments in the parser definition y file.
